@@ -107,7 +107,7 @@
                                     <includeConfigurationDirectoryInClasspath>true
                                     </includeConfigurationDirectoryInClasspath>
                                     <assembleDirectory>target/appassembler</assembleDirectory>
-                                    <extraJvmArguments>$SPARKTA_OPTS -Xms512m -Xmx512m
+                                    <extraJvmArguments>$SPARKTA_OPTS -Xms1024m -Xmx2048m -XX:MaxPermSize=512m
                                         -Dcom.sun.management.jmxremote.port=7193
                                         -Dcom.sun.management.jmxremote.authenticate=false
                                         -Dcom.sun.management.jmxremote.ssl=false
